--- a/templates/random_quote.html
+++ b/templates/random_quote.html
@@ -11,7 +11,8 @@
 	<script>
 		$(function() {{
 			function bla () {{
-				$("h1").removeClass('animate').load('/random', function () {{ $("h1").addClass('animate'); setTimeout(bla, 10000) }} );
+				$("h1").removeClass('animate');
+				$.get('/random', function(data) {{ $("h1").addClass('animate').text(data); setTimeout(bla, 10000) }} );
 			}}
 			bla();
 		}});
